<resources>
    <string name="app_name">GitHubSample</string>

    <string name="login">login</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign Out</string>
    <string name="click_complete">Click Complete</string>
    <string name="success">Success</string>

    <string name="your_device_code">Your Device Code</string>
    <string name="verification_url">Verification Url</string>
    <string name="go_to_verification">Go to Verification</string>
    <string name="complete_verification">Complete verification</string>

    <string name="home">Home</string>
    <string name="my_work">My Work</string>
    <string name="issues">Issues</string>
    <string name="pull_requests">Pull Requests</string>
    <string name="discussions">Discussions</string>
    <string name="repositories">Repositories</string>
    <string name="organizations">Organizations</string>
    <string name="favorites">Favorites</string>
    <string name="guide_add_favorite">
        Add favorite repositories for quick access at any time,\n
        without having to search</string>
    <string name="add_favorite">Add Favorites</string>
    <string name="shortcuts">Shortcuts</string>

    <string name="notifications">Notifications</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>

    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="popular">Popular</string>
    <string name="starred">Starred</string>

    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="more_options">More Options</string>

    <string name="error_no_activity_to_handle_intent">No Activity to handle intent</string>
    <string name="error_auth_invalid_verification_url">invalid url</string>
</resources>